gccida/c0/gen_subprogram_die
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_subprogram_die/src/dwarf2out.c:10650:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *fn_arg_types; // [rsp+40h] [rbp-50h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_subprogram_die/src/dwarf2out.c:10652:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *origin; // [rsp+58h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_subprogram_die/src/dwarf2out.c:10714:46: error: use of undeclared identifier 'off_7F9871'
sprintf( label_id, "*.%s%u", ( const char *)&off_7F9871, current_funcdef_number); 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_subprogram_die/src/dwarf2out.c:10716:46: error: use of undeclared identifier 'off_7F9875'
sprintf( label_id, "*.%s%u", ( const char *)&off_7F9875, current_funcdef_number); 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_subprogram_die/src/dwarf2out.c:10727:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_subprogram_die/src/dwarf2out.c:10774:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_subprogram_die/src/obj/dwarf2out.o] Error 1
